Disable F5/F6 for switching between screens

--- a/.screenrc
+++ b/.screenrc
@@ -5,8 +5,8 @@ startup_message off
 defscrollback 999999
 hardstatus alwayslastline "%{-b ck}%?%-Lw%?%{bg}%n*%f %t%?(%u)%?%{wk}%?%+Lw%? %= %{r} %H %{g} %D %d/%m/%Y %0c "
 
-bindkey -k k5 prev
-bindkey -k k6 next
+#bindkey -k k5 prev
+#bindkey -k k6 next
 
 # Make xterm scrolling work properly with screen.
 termcapinfo xterm-color|xterm|xterms|xs|rxvt ti@:te@
