--- a/.gitconfig
+++ b/.gitconfig
@@ -1,41 +1,35 @@
 [user]
+	email = rxin@databricks.com
 	name = Reynold Xin
-  email = reynoldx@gmail.com
-
-[alias]
-  co = checkout
-  ci = commit
-  st = status
-  br = branch
-  hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
 
 [color]
-	diff = auto
-	status = auto
-	branch = auto
-	interactive = auto
 	ui = true
-	pager = true
-
-[color "branch"]
-	current = yellow reverse
-	local = yellow
-	remote = green
-
-[color "diff"]
-	meta = yellow bold
-	frag = magenta bold
-	old = red bold
-	new = green bold
-
-[color "status"]
-	added = yellow
-	changed = green
-	untracked = cyan
 
 [merge]
-tool = p4merge
+	tool = p4merge
+
 [mergetool]
-prompt = false
+#	p4merge = cmd
+  trustExitCode = false
 
+[diff]
+#	external = p4diff
 
+[difftool]
+  prompt = false
+[alias]
+	lg = log --oneline --abbrev-commit --all --graph --decorate --color
+[help]
+	autocorrect = 1
+[credential]
+	helper = osxkeychain
+[filter "media"]
+	clean = git media clean %f
+	smudge = git media smudge %f
+	required = true
+[push]
+	default = simple
+[filter "lfs"]
+	clean = git-lfs clean %f
+	smudge = git-lfs smudge %f
+	required = true
